--- a/cv_es.html
+++ b/cv_es.html
@@ -46,7 +46,7 @@
       </span>
 
       <div class = "picture">
-        <img class = "id-picture" src="images/mini_photo_id.jpg">
+        <img class = "id-picture" src="images/pp.jpg">
       </div>
       <div class = "name-title">
         <h1>
