--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 			</span>
 
 			<div class = "picture">
-				<img class = "id-picture" src="images/mini_photo_id.jpg">
+				<img class = "id-picture" src="images/pp.jpg">
 			</div>
 			<div class = "name-title">
 				<h1>
 					Félix MORTAS
 				</h1>
 				<h2>
-					Consultant data science / sustainable IT
+					Data scientist, expert numérique éco-responsable et ingénieur agronome
 				</h2>
 			</div>
 
