--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 					<p class = "description-text">
 						Célibataire, 26 ans,<br />Permis B, Nationalité française
 					</p>
-					<!-- <div class = "div-button-go-map">
+					<div class = "div-button-go-map">
 						<button class = "map-button go-map">Voir CV dynamique</button>
-					</div> -->
+					</div>
 				</div>
 				
 
